# nbdev_example

./: LICENSE  README.md  index.ipynb  pyproject.toml  settings.ini
_proc/: index.ipynb
_proc/_docs/: core.html  robots.txt  sitemap.xml
nbdev_example/: _modidx.py
nbs/: index.ipynb  nbdev.yml
