[tool.poetry]
name = "nbdev_example"
version = "0.1.0"
description = "example of nbdev and notebooks"
authors = ["David Weinberg <weinbergphp@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
