[tool.poetry]
name = "nbdev-example"
version = "0.1.0"
description = "example of nbdev usage"
authors = ["David Weinberg <weinbergphp@gmail.com>"]
readme = "README.md"
packages = [{include = "nbdev_example"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab-quarto = "^0.2.7"
jupyterlab = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
